--- a/gb/23/2/24/n13937552.md
+++ b/gb/23/2/24/n13937552.md
@@ -7,20 +7,18 @@
 </h6>
 <hr>
 	<p>【大纪元2023年02月25日讯】（大纪元记者龙芳台湾苗栗报导）“今天好感动，我觉得我上天庭了！”“真是大饱眼福。”不动产公司业务经理邱主惠观看<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>后惊叹不已。</p>
-<p>2023年2月24日下午，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>世界艺术团在苗栗县苗北艺文中心展开台湾巡回的首场演出。初次聆赏神韵的邱主惠说道，当大幕一拉开，“就觉我上天庭了，他们都像仙女下凡一样，身材都很纤细，还有整个背景的天幕，我觉得都满厉害的，就连他们进出背后天幕的点都衔接的非常好。”</p>
-<p>邱主惠说，由于她是坐在前面的位置看的比较清楚，“很欣赏艺术家们的舞姿，跟他们的柔软度，剧情也很丰富，满可爱的，还有那个水秀舞也满好看的。”她继续说道，“演员的身体很轻盈啊，当她们抓住袖子抛的那一瞬间，哇！我觉得她们好厉害，真的是有练过。因为之前没有看过，所以当我亲眼看到了，那个感觉是很不一样的。”</p>
-<p>“我觉得整体做的非常好，就连服装设计都做得非常的精致，镶钻的服饰，每个服饰都让我印象非常的深刻，真是大饱眼福。”她说。</p>
-<p>对于坚持<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%BF%A1%E4%BB%B0.md#1">信仰</a>“真善忍”遭到中共的迫害的故事，邱主惠说，“那个被挖心脏活摘器官的舞剧，给我感受满强烈的”，她认为，现代社会中为什么还会存在着这种罪恶，这是“违背道德的，不能想像人性怎么会这么险恶。”</p>
+<p>2023年2月24日下午，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>世界艺术团在苗栗县苗北艺文中心展开台湾巡回的首场演出。初次聆赏神韵的邱主惠说道，当大幕一拉开，“就觉我上天庭了，他们都像仙女下凡一样，身材都很纤细，还有整个背景的天幕，都满厉害，他们进出背后天幕的（时间）点都衔接得非常好。”</p>
+<p>邱主惠说，由于她是坐在前面的位置看得比较清楚，“很欣赏艺术家们的舞姿，跟他们的柔软度，剧情也很丰富，满可爱的，还有那个《水袖》舞也满好看。”</p>
+<p>她继续说道，“演员的身体很轻盈啊，当她们抓住袖子抛出去的那一瞬间，哇！我觉得她们好厉害。因为之前没有看过，所以当我亲眼看到了，那个感觉是很不一样的。”</p>
+<p>“我觉得整体做得非常好，服装设计非常精致，镶钻的服饰，每个服饰都让我印象非常的深刻，真是大饱眼福。”她说。</p>
+<p>对于坚持<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%BF%A1%E4%BB%B0.md#1">信仰</a>“真、善、忍”遭中共的迫害的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%88%9E%E8%B9%88.md#1">舞蹈</a>故事，邱主惠“感受满强烈”，她认为，现代社会中为什么还会存在着这种罪恶，这是“违背道德的，不能想像人性怎么会这么险恶。”</p>
 <p>邱主惠表示，演出展现了天庭圣境的美好，也讲述了现代发生在中国的悲伤故事，“这强烈的对比，我觉得特别的鲜明，会特别的注意到这一块。”</p>
-<p>“因为我们有不同的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%BF%A1%E4%BB%B0.md#1">信仰</a>，但我觉得都是很正向的，感觉这是善的循环。”她分享观看神韵带给她的感受，“对于像有罪恶或者是比较不好的人，他们都会选择原谅、宽恕，然后会发现其实都会有好的回报。”</p>
+<p>“因为我们有不同的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%BF%A1%E4%BB%B0.md#1">信仰</a>，但我觉得都是很正向的，这是善的循环。”她感受，“对于有罪恶或者是比较不好的人，他们都会选择原谅、宽恕，然后会发现其实都会有好的回报。”</p>
 <p>对于神韵带来的传统价值，邱主惠回忆说，“有一幕展示人们一直在看手机，我觉得现代人好像都在幕后，大家都是藏镜人，比较没有与人之间的沟通跟接触，所以少了温暖。我会觉得现代人就是应该要面对自己，然后走出来，跟人家沟通才会有温度，就是这种感觉。”她认为，人的社会应该要恢复到真正的传统。</p>
 <p>看着舞台上，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%88%9E%E8%B9%88.md#1">舞蹈</a>演员们精湛的技艺及努力，邱主惠说，“这是最令她感动的地方，看到舞蹈家们都挥洒着汗水，哇！我觉得他们真的很用心在这个舞台上，就觉得他们好棒！”</p>
 <p>最后，她要向神韵艺术家们表达谢意，“真的很谢谢他们，日以继夜的练习，为我们带来这么好的演出。”</p>
 <p>责任编辑：于嫚</p>
 	
-<hr>
-
-
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/23/n13936733.md#1">“艺臻化境”神韵台湾演出在即 政要祝贺</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/23/n13936816.md#1">神韵演绎众神下世 资产管理顾问：效果出色</a></li>
@@ -29,36 +27,30 @@
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/24/n13936867.md#1">带母亲观神韵 国际公司销售主管收获惊喜</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/24/n13936871.md#1">主治医师观神韵 喜欢有关信仰的内涵</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/1/23/n12707407.md#1" target="_blank">闻欣：钱学森为何拒绝反对法轮功？</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/2/n10947448.md#1" target="_blank">晓明：与晏乐斌先生谈广西屠杀及文革“处遗”</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/18/n11461393.md#1" target="_blank">“中共是所有人噩梦”美智库主席吁解体中共</a></li>
-<hr>
-
+<li><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md#1" target="_blank">【史实】卡尔·马克思的成魔之路</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/13/9/14/n3964268.md#1" target="_blank">追查国际关于中共活摘法轮功学员器官证据专辑（2）</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/22/n13935896.md#1">李强入常难风光 将成中共最弱总理</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/19/n13933053.md#1">情缘未了 美高中生车祸身亡转生女友儿子</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/18/n13932359.md#1">【未解之谜】来自星星的孩子（2）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/11/n13927607.md#1">天的谴告 人的机会</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/3/n13921611.md#1">红楼欲坠话红楼：曹雪芹与法国现代作家普鲁斯特 思想意识“惊人相似”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/24/n13937217.md#1">【全球新闻】俄乌战争一周年 中共冒充和平使者</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/23/n13936605.md#1">【十字路口】北京对台笑面虎 认知战三大洗脑</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/23/n13936803.md#1">【环球直击】欧盟禁止官方设备上使用TikTok</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/22/n13935582.md#1">岳山：神秘人改名上位？习或改组国安部</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/21/n13934945.md#1">美国大学毕业五年内收入最高的十个专业</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/22/n13935896.md#1">李强入常难风光 将成中共最弱总理</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/21/n13934980.md#1">吐槽大陆真人秀拍摄方式 佘诗曼返港拍新剧</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/22/n13935009.md#1">时隔16年再相聚 刘荷娜晒与林志颖合照获赞</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/22/n13935855.md#1">白纸运动遭秋后算账 27岁男星周峻纬微博被禁</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/23/n13935998.md#1">“刘三姐”黄婉秋病危昏迷 最后绝笔信曝光</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/23/n13936794.md#1">歌手李玟透露“一辈子最大恐惧” 自曝身体缺陷</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/16/n13930853.md#1">经典食材：姜的聪明吃法 有助于提升免疫力</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/15/n13930478.md#1">吃马铃薯会得糖尿病？研究这样说</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/16/n13930856.md#1">血液循环好 子宫也会很健康 改善血瘀这样吃</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/15/n13930473.md#1">50岁前退休不是梦 8个务实的作法</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/21/n13934649.md#1">意大利布拉塔 光看着就好疗愈的起司</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/8/n14132234.md#1">人身有多难得？聊斋中的轮回故事</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/20/n14119976.md#1">雨霖铃?李克强之死</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/18/n14138664.md#1">冬至知多少？冬至文化典故与民俗集锦</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/17/n14137969.md#1">美国防承包商称 蛋形UFO曾保存在51区</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/30/n14127129.md#1">奉天命助圣王治世 百日为相白马化龙（下）</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/22/n14141715.md#1">【全球新闻】前央视喉舌王志安被起底 中共大外宣被看穿</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/22/n14141713.md#1">【晚间新闻】盘点2024年美中关系对抗焦点</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/20/n14140545.md#1">【百年真相】一把火烧80吨 中共三次焚书运动</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/20/n14140113.md#1">中共国安插足经济引内讧 与胡锡进互怼</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/20/n14140579.md#1">中共告诉拜登将统一台湾 白宫回应</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/20/n14140541.md#1">国务院智囊公开承认：历史留给中共时间已不多</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/19/n14139785.md#1">杨幂着15公斤礼服 累到在电梯里两度面壁</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/20/n14139880.md#1">两次被主持人说错一电影名 梁朝伟一脸尴尬</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/20/n14140599.md#1">为妻治病花光积蓄且欠债 港导演彭发申请破产</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/21/n14141362.md#1">黎姿曾因弟出车祸退圈 如今黎婴站立拍全家福</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/21/n14141408.md#1">央视书画节目总导演楼建军猝死 终年56岁</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/21/n14121397.md#1">每日更新：法国传奇 爱马仕香水年终5折酬宾</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14117110.md#1">旅行必备：旅行电源板3个USB 2个插座  41%折扣</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/6/n14130699.md#1">蜂蜜止咳胜抗生素 五代中医传人: 这样吃很有效</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/20/n14140144.md#1">睡前想什么会影响睡眠？ 专家这么说</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/19/n14139698.md#1">预防第2大夺命癌症 早做一件事生存率超9成</a></li>
 <hr>
-
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/2/24/n13937552.htm">业务经理观神韵 领悟“要与人沟通才有温暖”</a></p><hr>
-
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/2/24/n13937552.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
